<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_bringup</name>
  <version>1.0.0</version>
  <description>Bringup launch files for UAV navigation system</description>
  <maintainer email="thasinduwickrama12@gmail.com">thasinduwickrama</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  
  <exec_depend>uav_description</exec_depend>
  <exec_depend>uav_px4_comm</exec_depend>
  <exec_depend>uav_teleop</exec_depend>
  <exec_depend>uav_camera</exec_depend>
  <exec_depend>uav_slam</exec_depend>
  <exec_depend>uav_localization</exec_depend>
  <exec_depend>uav_navigation</exec_depend>
  <exec_depend>uav_mission</exec_depend>
  <exec_depend>xterm</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
