<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_localization</name>
  <version>1.0.0</version>
  <description>Sensor fusion and localization for UAV using robot_localization</description>
  <maintainer email="thasinduwickrama12@gmail.com">thasinduwickrama</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  
  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
